--- a/UWOScholar/UWOScholar/UWOScholarAndroid.csproj
+++ b/UWOScholar/UWOScholar/UWOScholarAndroid.csproj
@@ -54,15 +54,18 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Activity\HomeActivity.cs" />
-    <Compile Include="Activity\MainActivity.cs" />
-    <Compile Include="Activity\RegisterActivity.cs" />
+    <Compile Include="HomeActivity.cs" />
+    <Compile Include="LoginTable.cs" />
+    <Compile Include="MainActivity.cs" />
+    <Compile Include="RegisterActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="SQLite.cs" />
+    <Compile Include="SQLiteAsync.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GettingStarted.Xamarin" />
+    <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
