--- a/UWOScholar/UWOScholar/Properties/AndroidManifest.xml
+++ b/UWOScholar/UWOScholar/Properties/AndroidManifest.xml
@@ -4,6 +4,8 @@
           android:versionCode="1" 
           android:versionName="1.0">
   <uses-sdk android:minSdkVersion="21" />
-  <application android:allowBackup="true" android:label="@string/app_name">
-  </application>
+  <application android:allowBackup="true"
+               android:label="@string/app_name" 
+               android:theme="@style/MyTheme">
+</application>
 </manifest>
