--- a/UWOScholar/UWOScholar/UWOScholarAndroid.csproj
+++ b/UWOScholar/UWOScholar/UWOScholarAndroid.csproj
@@ -96,6 +96,7 @@
     <Compile Include="HomeActivity.cs" />
     <Compile Include="LoginTable.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="NotecardActivity.cs" />
     <Compile Include="RegisterActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -115,6 +116,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\Folder.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\Notecard.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
