--- a/UWOScholar/UWOScholar/UWOScholarAndroid.csproj
+++ b/UWOScholar/UWOScholar/UWOScholarAndroid.csproj
@@ -121,6 +121,9 @@
     <AndroidResource Include="Resources\layout\Notecard.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\ScientificCalculator.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
